tests/parsing/smtlib/v2.7/errors/005_attribute_name_2.smt2
(set-logic ALL)
(assert (! foo :bar 42 foo))
